--- a/contact.html
+++ b/contact.html
@@ -179,8 +179,8 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                Ultra Deep Tech specializes in AI security and protection. We provide comprehensive security solutions that monitor, protect, and secure AI systems across all environments. Our platform, Safety Shield Ultra™, delivers real-time protection for AI conversations,
-                                models, and infrastructure, ensuring your systems remain secure and compliant.
+                                Ultra Deep Tech provides AI security solutions and services. Our platform, Safety Shield Ultra™, delivers real-time protection for AI conversations, models, and infrastructure, ensuring your systems remain secure and compliant. We also offer AI consulting
+                                and implementation services to help businesses deploy secure AI solutions across all environments.
                             </div>
                         </div>
                     </div>
@@ -195,14 +195,13 @@
                             <div class="accordion-body">
                                 Our security services cover the complete AI protection lifecycle:
                                 <ul>
-                                    <li>Real-time AI conversation monitoring and threat detection</li>
-                                    <li>Model security assessment and hardening</li>
-                                    <li>AI governance and compliance frameworks</li>
-                                    <li>Data protection and privacy controls</li>
-                                    <li>Infrastructure security for AI deployments</li>
-                                    <li>Security training and awareness programs</li>
-                                    <li>Incident response and recovery</li>
-                                    <li>Continuous security monitoring and updates</li>
+                                    <li>AI security monitoring and protection</li>
+                                    <li>Model security assessment</li>
+                                    <li>AI governance and compliance</li>
+                                    <li>Data protection</li>
+                                    <li>Infrastructure security</li>
+                                    <li>Security training</li>
+                                    <li>AI consulting and implementation</li>
                                 </ul>
                             </div>
                         </div>
@@ -219,13 +218,12 @@
                                 Our approach is specifically designed for AI systems:
                                 <ul>
                                     <li>AI-first security architecture</li>
-                                    <li>Real-time monitoring of AI interactions</li>
-                                    <li>Specialized protection against AI-specific threats</li>
-                                    <li>Automated security controls for AI environments</li>
-                                    <li>Continuous adaptation to new AI threats</li>
-                                    <li>Comprehensive AI compliance coverage</li>
+                                    <li>Real-time AI monitoring</li>
+                                    <li>AI-specific threat protection</li>
+                                    <li>Automated security controls</li>
+                                    <li>Continuous AI threat adaptation</li>
+                                    <li>AI compliance coverage</li>
                                 </ul>
-                                We focus exclusively on AI security, providing deeper expertise than general security providers.
                             </div>
                         </div>
                     </div>
@@ -255,21 +253,20 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFive">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                How do you handle security incidents and response?
+                                How does Safety Shield Ultra™ handle incidents?
                             </button>
                         </h2>
                         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                Our incident response process is streamlined and efficient:
+                                Safety Shield Ultra™ provides automated incident response:
                                 <ol>
-                                    <li>24/7 AI security monitoring</li>
-                                    <li>Immediate threat detection and alerts</li>
-                                    <li>Rapid incident assessment</li>
-                                    <li>Quick containment and mitigation</li>
-                                    <li>Detailed incident reporting</li>
-                                    <li>Post-incident analysis and improvements</li>
+                                    <li>Continuous AI monitoring</li>
+                                    <li>Automated alerts</li>
+                                    <li>Real-time analysis</li>
+                                    <li>Automated containment</li>
+                                    <li>Incident logging</li>
+                                    <li>Security updates</li>
                                 </ol>
-                                We provide dedicated security teams and rapid response protocols to minimize impact.
                             </div>
                         </div>
                     </div>
@@ -277,19 +274,19 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingSix">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                What makes your security solutions scalable?
+                                What makes your solutions scalable?
                             </button>
                         </h2>
                         <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                Our security architecture is designed for enterprise-scale deployment:
+                                Our architecture supports enterprise deployment:
                                 <ul>
-                                    <li>Cloud-native security controls</li>
-                                    <li>Automated security scaling</li>
-                                    <li>Centralized security management</li>
+                                    <li>Cloud-native controls</li>
+                                    <li>Automated scaling</li>
+                                    <li>Centralized management</li>
                                     <li>Multi-environment support</li>
-                                    <li>API-first security integration</li>
-                                    <li>Flexible deployment options</li>
+                                    <li>API integration</li>
+                                    <li>Flexible deployment</li>
                                 </ul>
                                 We ensure your security grows with your AI infrastructure.
                             </div>
@@ -299,16 +296,16 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingSeven">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                                How do you ensure continuous security improvement?
+                                How do you maintain security?
                             </button>
                         </h2>
                         <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                We maintain continuous security enhancement through:
+                                We maintain security through:
                                 <ul>
-                                    <li>Regular security assessments</li>
-                                    <li>Threat intelligence updates</li>
-                                    <li>Security patch management</li>
+                                    <li>Regular assessments</li>
+                                    <li>Threat updates</li>
+                                    <li>Patch management</li>
                                     <li>Performance optimization</li>
                                     <li>Security training updates</li>
                                     <li>Compliance monitoring</li>
