changed the footer text call to action

--- a/contact.html
+++ b/contact.html
@@ -418,7 +418,7 @@
                     <div class="col-lg-5 col-md-12 footer-about">
                         <a href="index.html" class="logo d-flex align-items-center">
                             <span class="sitename3">Ultra Deep Tech</span> </a>
-                        <p></p>
+                        <p>Securing enterprise AI with measurable results. Schedule a demo to see your risk exposure.</p>
                         <div class="social-links d-flex mt-4">
                             <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
                             <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
