--- a/index.html
+++ b/index.html
@@ -837,22 +837,22 @@
 
         <div class="clients-container1">
             <div class="clients-wrapper1">
-              <img src="assets/img/Piere.svg" alt="Piere" class="clients1">
-              <img src="assets/img/motorola solutions.jpg" alt="Motorola Solutions" class="clients1">
-              <img src="assets/img/wiselayer.png" alt="wiselayer" class="clients1">
-              <img src="assets/img/ailert.png" alt="Ailert" class="clients1">
-              <img src="assets/img/the fitting room.png" alt="The fitting room" class="clients1">
-              <img src="assets/img/wakapi.png" alt="Wakapi" class="clients1">
-          
-              <!-- Duplicamos los logos para crear el efecto de carrusel continuo -->
-              <img src="assets/img/Piere.svg" alt="Piere" class="clients1">
-              <img src="assets/img/motorola solutions.jpg" alt="Motorola Solutions" class="clients1">
-              <img src="assets/img/wiselayer.png" alt="wiselayer" class="clients1">
-              <img src="assets/img/ailert.png" alt="Ailert" class="clients1">
-              <img src="assets/img/the fitting room.png" alt="The fitting room" class="clients1">
-              <img src="assets/img/wakapi.png" alt="Wakapi" class="clients1">
+                <img src="assets/img/Piere.svg" alt="Piere" class="clients1">
+                <img src="assets/img/motorola solutions.jpg" alt="Motorola Solutions" class="clients1">
+                <img src="assets/img/wiselayer.png" alt="wiselayer" class="clients1">
+                <img src="assets/img/ailert.png" alt="Ailert" class="clients1">
+                <img src="assets/img/the fitting room.png" alt="The fitting room" class="clients1">
+                <img src="assets/img/wakapi.png" alt="Wakapi" class="clients1">
+
+                <!-- Duplicamos los logos para crear el efecto de carrusel continuo -->
+                <img src="assets/img/Piere.svg" alt="Piere" class="clients1">
+                <img src="assets/img/motorola solutions.jpg" alt="Motorola Solutions" class="clients1">
+                <img src="assets/img/wiselayer.png" alt="wiselayer" class="clients1">
+                <img src="assets/img/ailert.png" alt="Ailert" class="clients1">
+                <img src="assets/img/the fitting room.png" alt="The fitting room" class="clients1">
+                <img src="assets/img/wakapi.png" alt="Wakapi" class="clients1">
             </div>
-          </div>
+        </div>
 
         <!-- Call To Action Section -->
         <section id="why-us" class="call-to-action section">
@@ -1110,8 +1110,7 @@
                         <a href="index.html" class="logo d-flex align-items-center">
                             <span class="sitename3">Ultra Deep Tech</span>
                         </a>
-                        <p>At Ultra Deep Tech, we simply help your business work smarter with AI, especially with generative and conversational systems. We'll help you save money and grow your revenue. Every AI solution we provide is built with security
-                            at heart – keeping your business safe and compliant. We believe in keeping things practical and focused on real results.</p>
+                        <p>Securing enterprise AI with measurable results. Schedule a demo to see your risk exposure.</p>
                         <div class="social-links d-flex mt-4">
                             <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
                             <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
