streamlined about page and eliminated values and ethics fluff including in nav bar

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                         <ul>
                             <li><a href="about.html#company-history" class="nav-link"><i class="bi bi-clock-history"></i><span>Company History</span></a></li>
                             <li><a href="about.html#team" class="nav-link"><i class="bi bi-people-fill"></i><span>Leadership Team</span></a></li>
-                            <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
+
                             <li><a href="index.html#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
                             <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
                         </ul>
@@ -171,8 +171,10 @@
                         <div class="content">
                             <h3>Company History</h3>
                             <p>
-                                Ultra Deep Tech was founded in 2023 with a mission to revolutionize the way businesses leverage artificial intelligence. Over the past years, we have grown from a small startup to a leading provider of AI solutions, helping numerous companies enhance
-                                their operations and achieve unprecedented growth. </p>
+                                Ultra Deep Tech was founded in 2023 by security professionals and AI specialists with 15+ years of combined experience in enterprise AI. Our founders witnessed the security gaps as organizations adopted AI without adequate protection. Drawing from backgrounds
+                                securing critical systems at Fortune 500 companies and addressing vulnerabilities in early machine learning implementations, we established Ultra Deep Tech to secure AI across enterprise environments. </p>
+                            <p>Our leadership team has navigated AI security challenges since the early deep learning boom, giving us insight into current and emerging threats. We leverage this technical knowledge to address the full spectrum of AI vulnerabilities—from
+                                model poisoning to prompt injection to data exfiltration—with the urgency modern enterprises require. </p>
                         </div>
                     </div>
                 </div>
@@ -181,7 +183,7 @@
         <!-- /Company History Section -->
 
         <!-- Values and Ethics Section -->
-        <section id="values-ethics" class="about section">
+        <!-- <section id="values-ethics" class="about section">
             <div class="container">
                 <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
 
@@ -208,7 +210,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- /Values and Ethics Section -->
 
 
@@ -216,7 +218,7 @@
             <div class="section-title">
 
                 <h2 class="mt-5 mb-4 text-center brands">Brands that trust us</h2>
-                <p class="justify-content-center text-center">At Ultra Deep Tech, we are proud to be a trusted partner for leading brands across industries. These visionary companies rely on our innovative solutions and expertise to drive their technological advancements and achieve their goals.</p>
+                <!-- <p class="justify-content-center text-center">At Ultra Deep Tech, we are proud to be a trusted partner for leading brands across industries. These visionary companies rely on our innovative solutions and expertise to drive their technological advancements and achieve their goals.</p> -->
 
             </div>
             <div class="clients-container">
@@ -248,7 +250,7 @@
                         <div class="col-lg-6">
                             <div class="section-title">
                                 <h2>Leadership Team</h2>
-                                <p>Meet the visionary leaders guiding Ultra Deep Tech.</p>
+                                <!-- <p>Meet the visionary leaders guiding Ultra Deep Tech.</p> -->
                             </div>
                         </div>
                     </div>
