added products , services and chges case studies to Industries, including changed the nav bar label to industries everywhere

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                         <ul>
                             <li><a href="service-details.html?product=product-1" class="nav-link"><i class="bi bi-gear-fill"></i><span>AI and Data Engineering Consulting</span></a></li>
                             <li><a href="service-details.html?product=product-2" class="nav-link"><i class="bi bi-diagram-3-fill"></i><span>Personalized Solutions</span></a></li>
-                            <li><a href="service-details.html#case-studies" class="nav-link"><i class="bi bi-file-earmark-text-fill"></i><span>Case Studies</span></a></li>
+                            <li><a href="service-details.html#case-studies" class="nav-link"><i class="bi bi-file-earmark-text-fill"></i><span>Industries</span></a></li>
                         </ul>
                     </li>
 
