--- a/productsdetails.html
+++ b/productsdetails.html
@@ -99,7 +99,7 @@
                         <ul>
                             <li><a href="service-details.html?product=product-1" class="nav-link"><i class="bi bi-gear-fill"></i><span>AI and Data Engineering Consulting</span></a></li>
                             <li><a href="service-details.html?product=product-2" class="nav-link"><i class="bi bi-diagram-3-fill"></i><span>Personalized Solutions</span></a></li>
-                            <li><a href="service-details.html#case-studies" class="nav-link"><i class="bi bi-file-earmark-text-fill"></i><span>Case Studies</span></a></li>
+                            <li><a href="service-details.html#case-studies" class="nav-link"><i class="bi bi-file-earmark-text-fill"></i><span>Industries</span></a></li>
                         </ul>
                     </li>
 
@@ -171,13 +171,10 @@
                         <div class="product-box">
                             <h4>Products List</h4>
                             <div class="product-list">
-                                <a href="#product-1" id="product-1-link" data-aos="product-1-link"><i class="bi bi-arrow-right-circle"></i> Interpretability<span></span></a>
-                                <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> Anonymization<span></span></a>
-                                <a href="#product-3" id="product-3-link"><i class="bi bi-arrow-right-circle"></i> Compression<span></span></a>
-                                <a href="#product-4" id="product-4-link"><i class="bi bi-arrow-right-circle"></i> Benchmarking<span></span></a>
-                                <a href="#product-5" id="product-5-link"><i class="bi bi-arrow-right-circle"></i> GenAI Safety<span></span></a>
-                                <a href="#product-6" id="product-6-link"><i class="bi bi-arrow-right-circle"></i> Evolving Threat Management<span></span></a>
-                                <a href="#product-7" id="product-7-link"><i class="bi bi-arrow-right-circle"></i>Algorithmic Protection<span></span></a>
+                                <a href="#product-1" id="product-1-link" data-aos="product-1-link"><i class="bi bi-arrow-right-circle"></i> Safety Shield Ultra™<span></span></a>
+                                <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> AI Model Protection Suite<span></span></a>
+                                <a href="#product-3" id="product-3-link"><i class="bi bi-arrow-right-circle"></i> Enterprise AI Security<span></span></a>
+                                <a href="#product-4" id="product-4-link"><i class="bi bi-arrow-right-circle"></i> AI Performance Optimization<span></span></a>
                             </div>
                         </div>
                         <!-- End Products List -->
@@ -192,18 +189,10 @@
 
                     <div class="col-lg-8 ps-lg-5 text-center" data-aos="fade-up" data-aos-delay="200">
                         <div id="product-content" class="service-box">
-                            <h3>Unlock the Power of AI with Our Comprehensive Solutions Suite </h3><br><br>
-                            <p>Explore our cutting-edge suite of AI solutions, meticulously designed to enhance model interpretability, ensure data privacy, optimize performance, and safeguard against evolving threats. Our offerings empower your organization
-                                to harness the full potential of AI with confidence and efficiency.<br><br> Gain unparalleled transparency into your AI models, enabling you to understand and explain every decision your AI makes. This fosters trust and
-                                enables informed decision-making across your organization. Protect sensitive information with our advanced anonymization techniques, ensuring data privacy and compliance with all regulations while preserving the utility
-                                and value of your data.<br><br> Optimize your data storage and transmission with our state-of-the-art compression algorithms, reducing storage costs and enhancing data transfer speeds without compromising quality. Benchmark
-                                your AI models against industry standards to ensure top-tier performance and reliability, providing detailed insights and metrics to help you achieve and maintain excellence.<br><br> Ensure the safe and ethical deployment
-                                of generative AI technologies with our GenAI safety solutions. Focus on ethical practices, risk mitigation, and secure deployment strategies, enabling responsible and robust innovation. Stay ahead of emerging threats with
-                                our proactive threat management solutions, identifying and neutralizing potential threats to your AI systems and data, establishing a secure and resilient digital environment.<br><br> Defend your AI algorithms from evolving
-                                threats with our advanced protection solutions. Our proactive threat detection and robust security protocols ensure the integrity and reliability of your algorithms at all times.<br><br> With our comprehensive suite of
-                                AI solutions, you're not just investing in technology; you're investing in a future where transparency, security, and efficiency are paramount. Partner with us to drive your digital transformation and stay ahead in the
-                                ever-evolving landscape of artificial intelligence.</p>
+                            <h3>Enterprise AI Security Solutions</h3><br><br>
+                            <p><b>Core Products:</b><br><br> • Safety Shield Ultra™ - Enterprise AI Protection<br> • AI Model Protection Suite<br> • Enterprise AI Security<br> • AI Performance Optimization<br><br>
 
+                                <b>Key Benefits:</b><br><br> • Comprehensive AI Security<br> • Regulatory Compliance<br> • Performance Optimization<br> • Risk Reduction</p>
                         </div>
                         <img src="" alt="" class="img-fluid product-img" id="product-img">
 
@@ -356,69 +345,50 @@
             function loadProductContent(productId) {
                 if (productId === 'product-1') {
                     productContent.innerHTML = `
-            <h3>Interpretability</h3>
-            <p>Discover our advanced interpretability solutions designed to provide you with complete transparency on how your AI models make decisions. Imagine being able to explain every prediction and action of your AI with clarity. This not only builds trust in AI-driven outcomes but also enhances informed decision-making, ensuring every step is justified and understandable to all stakeholders.</p>`;
-                    productImg.src = 'assets/img/interpretability.jpg';
+            <h3>Safety Shield Ultra™</h3>
+            <p>Enterprise-grade AI security platform protecting your conversational AI systems from modern threats.</p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> Prompt Injection Protection</li>
+              <li><i class="bi bi-check-circle"></i> Real-time Threat Detection</li>
+              <li><i class="bi bi-check-circle"></i> Data Exposure Monitoring</li>
+              <li><i class="bi bi-check-circle"></i> Automated Security Controls</li>
+              <li><i class="bi bi-check-circle"></i> Compliance Monitoring</li>
+              <li><i class="bi bi-check-circle"></i> And more...</li>
+            </ul>`;
+                    productImg.src = 'assets/img/safetyshield.jpg';
                 } else if (productId === 'product-2') {
                     productContent.innerHTML = `
-            <h3>Anonymization</h3>
-            <p>Protect your sensitive information with our cutting-edge anonymization solutions. We ensure your data privacy, complying with all data protection regulations while maintaining the utility of the information. With our technologies, you can transform your data into secure, anonymous assets without compromising its value, ensuring your operations are both secure and efficient.</p>`;
-                    productImg.src = 'assets/img/anonymization.jpg';
+            <h3>AI Model Protection Suite</h3>
+            <p>Comprehensive protection for your AI models, combining interpretability, anonymization, and algorithmic protection.</p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> Model Interpretability</li>
+              <li><i class="bi bi-check-circle"></i> Data Anonymization</li>
+              <li><i class="bi bi-check-circle"></i> Algorithmic Protection</li>
+              <li><i class="bi bi-check-circle"></i> Security Benchmarking</li>
+            </ul>`;
+                    productImg.src = 'assets/img/model-protection.jpg';
                 } else if (productId === 'product-3') {
                     productContent.innerHTML = `
-            <h3>Compression</h3>
-            <p>Optimize your data storage and transmission with our state-of-the-art compression algorithms. Reduce storage costs and enhance data transfer speeds without compromising quality, driving operational efficiency and cost savings.</p>
+            <h3>Enterprise AI Security</h3>
+            <p>End-to-end security solution for enterprise AI deployments, focusing on compliance and risk management.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Lossless data compression</li>
-              <li><i class="bi bi-check-circle"></i> Faster data transfer</li>
-              <li><i class="bi bi-check-circle"></i> Reduced storage costs</li>
-              <li><i class="bi bi-check-circle"></i> High compression ratios</li>
+              <li><i class="bi bi-check-circle"></i> Compliance Automation</li>
+              <li><i class="bi bi-check-circle"></i> Risk Assessment</li>
+              <li><i class="bi bi-check-circle"></i> Security Monitoring</li>
+              <li><i class="bi bi-check-circle"></i> Incident Response</li>
             </ul>`;
-                    productImg.src = 'assets/img/compression.jpg';
+                    productImg.src = 'assets/img/enterprise-security.jpg';
                 } else if (productId === 'product-4') {
                     productContent.innerHTML = `
-            <h3>Benchmarking</h3>
-            <p>Benchmark your AI models against industry standards to ensure top-tier performance and reliability. Our comprehensive benchmarking tools provide detailed insights and metrics, helping you achieve and maintain excellence.</p>
+            <h3>AI Performance Optimization</h3>
+            <p>Optimize your AI systems for maximum efficiency while maintaining security standards.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Comprehensive performance metrics</li>
-              <li><i class="bi bi-check-circle"></i> Industry-standard benchmarks</li>
-              <li><i class="bi bi-check-circle"></i> Detailed performance reports</li>
-              <li><i class="bi bi-check-circle"></i> Actionable insights for improvement</li>
+              <li><i class="bi bi-check-circle"></i> Model Compression</li>
+              <li><i class="bi bi-check-circle"></i> Performance Benchmarking</li>
+              <li><i class="bi bi-check-circle"></i> Resource Optimization</li>
+              <li><i class="bi bi-check-circle"></i> Cost Reduction</li>
             </ul>`;
-                    productImg.src = 'assets/img/benchmarking.jpg';
-                } else if (productId === 'product-5') {
-                    productContent.innerHTML = `
-            <h3>GenAI Safety</h3>
-            <p>Ensure the safe and ethical deployment of generative AI technologies. Our GenAI safety solutions focus on ethical practices, risk mitigation, and secure deployment strategies, enabling responsible and robust innovation.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Ethical AI usage guidelines</li>
-              <li><i class="bi bi-check-circle"></i> Risk assessment and mitigation</li>
-              <li><i class="bi bi-check-circle"></i> Continuous monitoring and auditing</li>
-              <li><i class="bi bi-check-circle"></i> Compliance with ethical standards</li>
-            </ul>`;
-                    productImg.src = 'assets/img/GenAI Safety.jpg';
-                } else if (productId === 'product-6') {
-                    productContent.innerHTML = `
-            <h3>Evolving Threat Management</h3>
-            <p>Stay ahead of emerging threats with our proactive threat management solutions. We identify and neutralize potential threats to your AI systems and data, establishing a secure and resilient digital environment.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Proactive threat detection</li>
-              <li><i class="bi bi-check-circle"></i> Real-time threat response</li>
-              <li><i class="bi bi-check-circle"></i> Adaptive security measures</li>
-              <li><i class="bi bi-check-circle"></i> Comprehensive threat intelligence</li>
-            </ul>`;
-                    productImg.src = 'assets/img/threat-management.jpg';
-                } else if (productId === 'product-7') {
-                    productContent.innerHTML = `
-            <h3>Algorithmic Protection</h3>
-            <p>Defend your AI algorithms from evolving threats with our advanced protection solutions. Our proactive threat detection and robust security protocols ensure the integrity and reliability of your algorithms at all times.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Robust defense mechanisms</li>
-              <li><i class="bi bi-check-circle"></i> Continuous model monitoring</li>
-              <li><i class="bi bi-check-circle"></i> Regular security audits</li>
-              <li><i class="bi bi-check-circle"></i> Incident response and recovery</li>
-            </ul>`;
-                    productImg.src = 'assets/img/algorithmic-protection.png';
+                    productImg.src = 'assets/img/performance-optimization.jpg';
                 }
             }
 
