--- a/productsdetails.html
+++ b/productsdetails.html
@@ -172,9 +172,9 @@
                             <h4>Products List</h4>
                             <div class="product-list">
                                 <a href="#product-1" id="product-1-link" data-aos="product-1-link"><i class="bi bi-arrow-right-circle"></i> Safety Shield Ultra™<span></span></a>
-                                <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> AI Model Protection Suite<span></span></a>
-                                <a href="#product-3" id="product-3-link"><i class="bi bi-arrow-right-circle"></i> Enterprise AI Security<span></span></a>
-                                <a href="#product-4" id="product-4-link"><i class="bi bi-arrow-right-circle"></i> AI Performance Optimization<span></span></a>
+                                <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> Model Protection Suite<span></span></a>
+                                <a href="#product-3" id="product-3-link"><i class="bi bi-arrow-right-circle"></i> Enterprise Security<span></span></a>
+                                <a href="#product-4" id="product-4-link"><i class="bi bi-arrow-right-circle"></i> Performance Optimization<span></span></a>
                             </div>
                         </div>
                         <!-- End Products List -->
