--- a/productsdetails.html
+++ b/productsdetails.html
@@ -190,7 +190,7 @@
                     <div class="col-lg-8 ps-lg-5 text-center" data-aos="fade-up" data-aos-delay="200">
                         <div id="product-content" class="service-box">
                             <h3>Enterprise AI Security Solutions</h3><br><br>
-                            <p><b>Core Products:</b><br><br> • Safety Shield Ultra™ - Enterprise AI Protection<br> • AI Model Protection Suite<br> • Enterprise AI Security<br> • AI Performance Optimization<br><br>
+                            <p><b>Core Products:</b><br><br> • Safety Shield Ultra™ - Enterprise Protection<br> • Model Protection Suite<br> • Enterprise Security<br> • Performance Optimization<br><br>
 
                                 <b>Key Benefits:</b><br><br> • Comprehensive AI Security<br> • Regulatory Compliance<br> • Performance Optimization<br> • Risk Reduction</p>
                         </div>
@@ -358,7 +358,7 @@
                     productImg.src = 'assets/img/safetyshield.jpg';
                 } else if (productId === 'product-2') {
                     productContent.innerHTML = `
-            <h3>AI Model Protection Suite</h3>
+            <h3>Model Protection Suite</h3>
             <p>Comprehensive protection for your AI models, combining interpretability, anonymization, and algorithmic protection.</p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Model Interpretability</li>
@@ -369,7 +369,7 @@
                     productImg.src = 'assets/img/model-protection.jpg';
                 } else if (productId === 'product-3') {
                     productContent.innerHTML = `
-            <h3>Enterprise AI Security</h3>
+            <h3>Enterprise Security</h3>
             <p>End-to-end security solution for enterprise AI deployments, focusing on compliance and risk management.</p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Compliance Automation</li>
@@ -380,7 +380,7 @@
                     productImg.src = 'assets/img/enterprise-security.jpg';
                 } else if (productId === 'product-4') {
                     productContent.innerHTML = `
-            <h3>AI Performance Optimization</h3>
+            <h3>Performance Optimization</h3>
             <p>Optimize your AI systems for maximum efficiency while maintaining security standards.</p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Model Compression</li>
