--- a/service-details.html
+++ b/service-details.html
@@ -171,14 +171,10 @@
                         <div class="product-box">
                             <h4>Service List</h4>
                             <div class="product-list">
-                                <a href="#product-1" id="product-1-link" data-aos="product-1-link"><i class="bi bi-arrow-right-circle"></i> AI Security Assessment & Hardening<span></span></a>
-                                <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> Enterprise AI Architecture Design<span></span></a>
-                                <a href="#product-3" id="product-3-link"><i class="bi bi-arrow-right-circle"></i> AI Security Implementation<span></span></a>
-                                <a href="#product-4" id="product-4-link"><i class="bi bi-arrow-right-circle"></i> Compliance & Risk Management<span></span></a>
-                                <a href="#product-5" id="product-5-link"><i class="bi bi-arrow-right-circle"></i> AI Security Training & Workshops<span></span></a>
-                                <a href="#product-6" id="product-6-link"><i class="bi bi-arrow-right-circle"></i> Continuous Security Monitoring<span></span></a>
-                                <a href="#product-7" id="product-7-link"><i class="bi bi-arrow-right-circle"></i> Incident Response & Recovery<span></span></a>
-                                <a href="#product-8" id="product-8-link"><i class="bi bi-arrow-right-circle"></i> Executive AI Security Consulting<span></span></a>
+                                <a href="#product-1" id="product-1-link" data-aos="product-1-link"><i class="bi bi-arrow-right-circle"></i> AI Security Assessment & Strategy<span></span></a>
+                                <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> Implementation & Architecture<span></span></a>
+                                <a href="#product-3" id="product-3-link"><i class="bi bi-arrow-right-circle"></i> Training & Education<span></span></a>
+                                <a href="#product-4" id="product-4-link"><i class="bi bi-arrow-right-circle"></i> Monitoring & Support<span></span></a>
                             </div>
                         </div>
                         <!-- End Products List -->
@@ -194,10 +190,9 @@
                     <div class="col-lg-8 ps-lg-5 text-center" data-aos="fade-up" data-aos-delay="200">
                         <div id="product-content" class="service-box">
                             <h3>Enterprise AI Security Services</h3><br>
-                            <p><b>Core Services:</b><br><br> • AI Security Assessment & Hardening<br> • Enterprise AI Architecture Design<br> • AI Security Implementation<br> • Compliance & Risk Management<br> • Continuous Security Monitoring<br> • Incident
-                                Response & Recovery<br> • Executive AI Security Consulting<br><br>
+                            <p><b>Core Services:</b><br><br> • AI Security Assessment & Strategy<br> • Implementation & Architecture<br> • Training & Education<br> • Monitoring & Support<br><br>
 
-                                <b>Training & Education:</b><br><br> • AI Security Training & Workshops<br> • Custom Enterprise Training Programs<br> • Security Team Certification<br> • Executive AI Security Briefings<br> • Hands-on Security Labs</p>
+                                <b>Comprehensive Coverage:</b><br><br> • Security Assessment & Hardening<br> • Enterprise Architecture Design<br> • Compliance & Risk Management<br> • Continuous Monitoring & Support<br> • Incident Response & Recovery</p>
                         </div>
                         <img src="" alt="" class="img-fluid product-img" id="product-img">
 
@@ -370,51 +365,29 @@
             function loadProductContent(productId) {
                 if (productId === 'product-1') {
                     productContent.innerHTML = `
-            <h3>AI Security Assessment & Hardening</h3>
-            <p>Comprehensive security evaluation and strengthening of your AI systems. Our expert team conducts thorough assessments to identify vulnerabilities and implement robust security measures.</p>
+            <h3>AI Security Assessment & Strategy</h3>
+            <p>Comprehensive security evaluation and strategic planning for your AI systems. Our expert team conducts thorough assessments and develops robust security strategies.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Vulnerability Assessment</li>
+              <li><i class="bi bi-check-circle"></i> Vulnerability Assessment & Hardening</li>
               <li><i class="bi bi-check-circle"></i> Security Gap Analysis</li>
-              <li><i class="bi bi-check-circle"></i> System Hardening</li>
-              <li><i class="bi bi-check-circle"></i> Security Best Practices Implementation</li>
+              <li><i class="bi bi-check-circle"></i> Compliance & Risk Management</li>
+              <li><i class="bi bi-check-circle"></i> Executive Security Consulting</li>
             </ul>`;
                     productImg.src = 'assets/img/blog/blog-1.jpg';
                 } else if (productId === 'product-2') {
                     productContent.innerHTML = `
-            <h3>Enterprise AI Architecture Design</h3>
+            <h3>Implementation & Architecture</h3>
             <p>Strategic design and implementation of secure AI architectures tailored to your enterprise needs. We ensure your AI infrastructure is built with security as a fundamental component.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Security-First Architecture</li>
-              <li><i class="bi bi-check-circle"></i> Scalable Design</li>
+              <li><i class="bi bi-check-circle"></i> Security-First Architecture Design</li>
+              <li><i class="bi bi-check-circle"></i> Security Controls Deployment</li>
               <li><i class="bi bi-check-circle"></i> Integration Planning</li>
-              <li><i class="bi bi-check-circle"></i> Compliance Alignment</li>
+              <li><i class="bi bi-check-circle"></i> Access Management & Encryption</li>
             </ul>`;
                     productImg.src = 'assets/img/blog/blog-3.jpg';
                 } else if (productId === 'product-3') {
                     productContent.innerHTML = `
-            <h3>AI Security Implementation</h3>
-            <p>Expert implementation of security measures across your AI systems. We ensure your AI infrastructure is protected against modern threats while maintaining optimal performance.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Security Controls Deployment</li>
-              <li><i class="bi bi-check-circle"></i> Access Management</li>
-              <li><i class="bi bi-check-circle"></i> Encryption Implementation</li>
-              <li><i class="bi bi-check-circle"></i> Security Testing</li>
-            </ul>`;
-                    productImg.src = 'assets/img/compression.jpg';
-                } else if (productId === 'product-4') {
-                    productContent.innerHTML = `
-            <h3>Compliance & Risk Management</h3>
-            <p>Comprehensive compliance and risk management services to ensure your AI systems meet regulatory requirements and industry standards.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Regulatory Compliance</li>
-              <li><i class="bi bi-check-circle"></i> Risk Assessment</li>
-              <li><i class="bi bi-check-circle"></i> Policy Development</li>
-              <li><i class="bi bi-check-circle"></i> Compliance Monitoring</li>
-            </ul>`;
-                    productImg.src = 'assets/img/benchmarking.jpg';
-                } else if (productId === 'product-5') {
-                    productContent.innerHTML = `
-            <h3>AI Security Training & Workshops</h3>
+            <h3>Training & Education</h3>
             <p>Comprehensive training programs designed to build your team's AI security expertise. From basic concepts to advanced security practices.</p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Custom Training Programs</li>
@@ -423,39 +396,17 @@
               <li><i class="bi bi-check-circle"></i> Team Certification</li>
             </ul>`;
                     productImg.src = 'assets/img/GenAI Safety.jpg';
-                } else if (productId === 'product-6') {
+                } else if (productId === 'product-4') {
                     productContent.innerHTML = `
-            <h3>Continuous Security Monitoring</h3>
-            <p>24/7 monitoring and protection of your AI systems with real-time threat detection and response capabilities.</p>
+            <h3>Monitoring & Support</h3>
+            <p>24/7 monitoring and comprehensive support services for your AI systems, ensuring continuous protection and rapid incident response.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Real-time Monitoring</li>
-              <li><i class="bi bi-check-circle"></i> Threat Detection</li>
-              <li><i class="bi bi-check-circle"></i> Performance Tracking</li>
-              <li><i class="bi bi-check-circle"></i> Security Analytics</li>
+              <li><i class="bi bi-check-circle"></i> Real-time Security Monitoring</li>
+              <li><i class="bi bi-check-circle"></i> Threat Detection & Response</li>
+              <li><i class="bi bi-check-circle"></i> Incident Response & Recovery</li>
+              <li><i class="bi bi-check-circle"></i> Performance Analytics</li>
             </ul>`;
                     productImg.src = 'assets/img/threat-management.jpg';
-                } else if (productId === 'product-7') {
-                    productContent.innerHTML = `
-            <h3>Incident Response & Recovery</h3>
-            <p>Rapid response and recovery services for AI security incidents, ensuring minimal disruption to your operations.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Incident Response</li>
-              <li><i class="bi bi-check-circle"></i> System Recovery</li>
-              <li><i class="bi bi-check-circle"></i> Post-incident Analysis</li>
-              <li><i class="bi bi-check-circle"></i> Prevention Planning</li>
-            </ul>`;
-                    productImg.src = 'assets/img/algorithmic-protection.png';
-                } else if (productId === 'product-8') {
-                    productContent.innerHTML = `
-            <h3>Executive AI Security Consulting</h3>
-            <p>Strategic consulting services for C-level executives and decision-makers on AI security strategy and implementation.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Security Strategy</li>
-              <li><i class="bi bi-check-circle"></i> Risk Management</li>
-              <li><i class="bi bi-check-circle"></i> Investment Planning</li>
-              <li><i class="bi bi-check-circle"></i> Board Presentations</li>
-            </ul>`;
-                    productImg.src = 'assets/img/executive-consulting.jpg';
                 }
             }
 
