--- a/service-details.html
+++ b/service-details.html
@@ -174,7 +174,6 @@
                                 <a href="#product-1" id="product-1-link" data-aos="product-1-link"><i class="bi bi-arrow-right-circle"></i> AI Security Assessment & Strategy<span></span></a>
                                 <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> Implementation & Architecture<span></span></a>
                                 <a href="#product-3" id="product-3-link"><i class="bi bi-arrow-right-circle"></i> Training & Education<span></span></a>
-                                <a href="#product-4" id="product-4-link"><i class="bi bi-arrow-right-circle"></i> Monitoring & Support<span></span></a>
                             </div>
                         </div>
                         <!-- End Products List -->
@@ -190,7 +189,7 @@
                     <div class="col-lg-8 ps-lg-5 text-center" data-aos="fade-up" data-aos-delay="200">
                         <div id="product-content" class="service-box">
                             <h3>Enterprise AI Security Services</h3><br>
-                            <p><b>Core Services:</b><br><br> • AI Security Assessment & Strategy<br> • Implementation & Architecture<br> • Training & Education<br> • Monitoring & Support<br><br>
+                            <p><b>Core Services:</b><br><br> • AI Security Assessment & Strategy<br> • Implementation & Architecture<br> • Training & Education<br><br>
 
                                 <b>Comprehensive Coverage:</b><br><br> • Security Assessment & Hardening<br> • Enterprise Architecture Design<br> • Compliance & Risk Management<br> • Continuous Monitoring & Support<br> • Incident Response & Recovery</p>
                         </div>
@@ -377,12 +376,15 @@
                 } else if (productId === 'product-2') {
                     productContent.innerHTML = `
             <h3>Implementation & Architecture</h3>
-            <p>Strategic design and implementation of secure AI architectures tailored to your enterprise needs. We ensure your AI infrastructure is built with security as a fundamental component.</p>
+            <p>Strategic design, implementation, and ongoing support of secure AI architectures tailored to your enterprise needs. We ensure your AI infrastructure is built and maintained with security as a fundamental component.</p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Security-First Architecture Design</li>
               <li><i class="bi bi-check-circle"></i> Security Controls Deployment</li>
               <li><i class="bi bi-check-circle"></i> Integration Planning</li>
               <li><i class="bi bi-check-circle"></i> Access Management & Encryption</li>
+              <li><i class="bi bi-check-circle"></i> Real-time Security Monitoring</li>
+              <li><i class="bi bi-check-circle"></i> Incident Response & Recovery</li>
+              <li><i class="bi bi-check-circle"></i> Performance Analytics</li>
             </ul>`;
                     productImg.src = 'assets/img/blog/blog-3.jpg';
                 } else if (productId === 'product-3') {
@@ -396,17 +398,6 @@
               <li><i class="bi bi-check-circle"></i> Team Certification</li>
             </ul>`;
                     productImg.src = 'assets/img/GenAI Safety.jpg';
-                } else if (productId === 'product-4') {
-                    productContent.innerHTML = `
-            <h3>Monitoring & Support</h3>
-            <p>24/7 monitoring and comprehensive support services for your AI systems, ensuring continuous protection and rapid incident response.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Real-time Security Monitoring</li>
-              <li><i class="bi bi-check-circle"></i> Threat Detection & Response</li>
-              <li><i class="bi bi-check-circle"></i> Incident Response & Recovery</li>
-              <li><i class="bi bi-check-circle"></i> Performance Analytics</li>
-            </ul>`;
-                    productImg.src = 'assets/img/threat-management.jpg';
                 }
             }
 
